  * Broken link in "programming" (LP: #310081) - Jonathan Jesse
  * lsb_release issue in "basic commands" (LP: #310713) - Thomas M
  * Updating logout instructions (LP: #327060) - Dean Sas
  * Updating all documents to use apt-url for installation instructions
  * Refreshing pot files for Rosetta
  * Recompress *.png files with 'advpng -z -4 file.png' to save space -  Sahak Petrosyan

 -- Matthew East <mdke@ubuntu.com>  Sun, 15 Feb 2009 11:50:28 
+0000

ubuntu-docs (9.04.1) jaunty; urgency=low

  * Images should not be executable (LP: #206371) - Sahak Petrosyan
  * Couple of typos (LP: #282358, LP: #266997) - Sahak Petrosyan
  * ubuntu-restricted-extras has java6 (LP: #288623) - Dean Sas
  * Permit building html for other languages in Makefile - Mitsuya Shibata
  * Use the same background image as Ubuntu website (LP: #305760)
  * Make search available for users without javascript - Dustin Kirkland
  * Various content improvements - Phil Bull
  * Use "Enter", not "Return" - Joel Goguen (LP: #213104)

 -- Matthew East <mdke@ubuntu.com>  Thu, 11 Dec 2008 12:47:51 +0000

ubuntu-docs (8.10.2) intrepid; urgency=low

  * Updating translations from Launchpad as at 19 Oct 08 (LP: #286829)
  * Small update to Hebrew translation of browser startpage (LP: #285696)
  * To save CD space, only ship translations which are over 75% translated

 -- Matthew East <mdke@ubuntu.com>  Sun, 19 Oct 2008 20:21:13 +0100

ubuntu-docs (8.10.1) intrepid; urgency=low

  * Add ukranian translation of firefox homepage (LP: #216982)
  * Correct wrong codename in basic-commands document (LP: #281664)

 -- Matthew East <mdke@ubuntu.com>  Tue, 14 Oct 2008 22:27:20 +0100

ubuntu-docs (8.09.2) intrepid; urgency=low

  * ubuntu-serverguide should suggest www-browser and not firefox (LP: #272772)

 -- Matthew East <mdke@ubuntu.com>  Sun, 21 Sep 2008 21:21:03 +0100

ubuntu-docs (8.09.1) intrepid; urgency=low

  * about-ubuntu validity fix (LP: #255088)