@@ -482,12 +482,16 @@ Codename:       &distro-short-codename;</screen>
 	  <keycap>V</keycap>
 	</keycombo>. Surely you don't
 	have to type in all those nasty commands and filenames?
-	Relax. Middle Button Click on your mouse (both buttons
-	simultaneously on a two-button mouse) or Right Click and
-	select 
+	Relax. You can simply click in the terminal and select
 	<menuchoice>
 	  <guimenuitem>Paste</guimenuitem>
 	</menuchoice> from the menu.
+	You can also select the required commands in your web browser and
+	then subsequently click the middle button on your mouse (or simply
+	click buttons simultaneously on a two-button mouse) in the terminal
+	to paste in the select command.
+	<note><para>These actions may mean something entirely different to other
+	terminal emulators. Consult your emulator's documentation for details.</para></note>
       </para>
     </sect2>
 
