@@ -25,6 +25,7 @@ ubuntu-docs (9.04.2) jaunty; urgency=low
   * Updating all documents to use apt-url for installation instructions
   * Refreshing pot files for Rosetta
   * Recompress *.png files with 'advpng -z -4 file.png' to save space -  Sahak Petrosyan
+  * Improve instructions on pasting commands (LP: #185892) - Martin Mai
 
  -- Matthew East <mdke@ubuntu.com>  Sun, 15 Feb 2009 11:50:28 
 +0000
